--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>hellosss adas  world</p>
+    <p>helloss</p>
     <p>OKE THIS WAY</p>
     <p>all i want for chrimas</p>
 </body>
